--- a/index.html
+++ b/index.html
@@ -20,33 +20,32 @@
   --ff-sans:"Poppins",system-ui,Arial;
 }
 
-/* base */
+/* Base */
 html,body{height:100%;margin:0;font-family:var(--ff-sans);background:var(--bg);color:var(--text-light);padding-top:72px}
 a{color:inherit;text-decoration:none}
 
-/* header */
+/* Header + Nav */
 header{position:fixed;top:0;left:0;right:0;z-index:60;display:flex;align-items:center;justify-content:space-between;padding:12px 20px;background:var(--glass);backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,0.03)}
 .brand{display:flex;align-items:center;gap:12px}
 .brand img{height:40px}
 .site-title{font-family:'Montserrat';font-weight:800;font-size:20px}
-nav{display:flex;align-items:center;gap:12px}
-nav a{padding:8px 12px;border-radius:8px;color:var(--text-light);font-weight:600}
-nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0 6px 18px rgba(0,0,0,0.45)}
+#top-nav{display:flex;align-items:center;gap:12px}
+#top-nav a.nav-link{padding:8px 12px;border-radius:12px;color:var(--text-light);font-weight:600;background:transparent;border:1px solid transparent;transition:all .15s}
+#top-nav a.nav-link.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0 6px 18px rgba(0,0,0,0.35);border:none}
 
-/* solid CTA Peta */
-.btn-secondary, nav a.btn-secondary { background: var(--accent); color:#071016 !important; padding:10px 14px; border-radius:8px; font-weight:700; }
+/* unified button style */
+.btn{display:inline-block;padding:10px 16px;border-radius:12px;font-weight:800;text-align:center;background:var(--accent);color:#071016;border:none;box-shadow:0 6px 18px rgba(0,0,0,0.25)}
+.btn-outline{background:transparent;border:1px solid rgba(255,255,255,0.08);color:var(--text-light);font-weight:700;border-radius:12px;padding:8px 12px}
 
-/* hero */
+/* Hero */
 .hero{height:62vh;background-image:url('images/background-maluku.jpg');background-size:cover;background-position:center;display:flex;align-items:center;justify-content:center;position:relative}
 .hero::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg,rgba(0,0,0,0.52),rgba(0,0,0,0.78));}
 .hero-inner{position:relative;z-index:10;text-align:center;padding:20px;max-width:960px}
 .hero h1{font-family:'Montserrat';font-weight:900;font-size:44px;margin:0;text-align:center}
 .hero p{color:var(--muted);margin-top:10px;font-size:16px;text-align:center}
 .hero .cta-row{margin-top:18px;display:flex;gap:12px;justify-content:center}
-.btn-primary{background:var(--accent);color:#071016;padding:12px 18px;border-radius:999px;font-weight:800}
-.btn-secondary{background:var(--accent);color:#071016;padding:10px 14px;border-radius:8px;font-weight:700}
 
-/* sectors */
+/* Sectors */
 .section{padding:54px 18px;max-width:1200px;margin:0 auto}
 .sector-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:14px}
 .sector-card{background:rgba(255,255,255,0.02);padding:16px;border-radius:10px;text-align:center}
@@ -54,20 +53,20 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
 .sector-card h3{color:var(--accent);margin:8px 0 4px;font-size:15px;font-weight:700;text-align:center}
 .sector-card p{color:var(--muted);font-size:13px;margin:0;text-align:center}
 
-/* dashboard */
+/* Dashboard */
 .dashboard{background:linear-gradient(180deg,rgba(6,10,14,0.65),rgba(6,10,14,0.45));padding:36px 18px;border-top:2px solid rgba(255,255,255,0.03)}
 .container{max-width:1200px;margin:0 auto;display:flex;flex-direction:column;align-items:center}
 
-/* recap header */
+/* Recap header */
 .recap-header{width:100%;max-width:1120px;background:rgba(255,255,255,0.02);padding:12px 14px;border-radius:8px;border-left:4px solid rgba(255,255,255,0.03);margin-bottom:12px;text-align:center}
 .recap-header h2{margin:0;font-family:'Montserrat';font-weight:900;font-size:20px;color:var(--text-light);text-align:center}
 .recap-header p{margin:6px 0 0;color:var(--muted);font-size:13px;text-align:center}
 
-/* rows: top 3, bottom 2 */
-.cards-row { display:flex; justify-content:center; gap:14px; width:100%; flex-wrap:wrap; margin-bottom:12px; }
-.card { width: var(--card-w); background:rgba(255,255,255,0.03); border-radius:10px; border:1px solid rgba(255,255,255,0.05); overflow:hidden; box-shadow:0 8px 24px rgba(0,0,0,0.6); backdrop-filter:blur(4px); }
+/* Rows: top 3, bottom 2 */
+.cards-row{display:flex;justify-content:center;gap:14px;width:100%;flex-wrap:wrap;margin-bottom:12px}
+.card{width:var(--card-w);background:rgba(255,255,255,0.03);border-radius:10px;border:1px solid rgba(255,255,255,0.05);overflow:hidden;box-shadow:0 8px 24px rgba(0,0,0,0.6);backdrop-filter:blur(4px)}
 
-/* card head */
+/* Card head (centered) */
 .card-head{background:linear-gradient(180deg,var(--navy),#0b3556aa);padding:12px;text-align:center}
 .card-head h4{margin:0;font-family:'Montserrat';font-weight:900;font-size:13px;color:var(--accent);text-align:center}
 .card-head .title-line{display:block;margin-top:8px;font-weight:700;font-size:15px;color:var(--text-light);text-align:center}
@@ -76,7 +75,7 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
 .card-head .invest-label{display:block;margin-top:8px;font-size:11px;color:#d6e8fb;font-weight:700;text-align:center}
 .card-head .invest-value{display:block;margin-top:4px;font-weight:800;color:var(--accent);font-size:14px;text-align:center}
 
-/* body and table: smaller font for neatness; center section titles */
+/* Body and table: centered titles */
 .body{padding:10px;background:rgba(255,255,255,0.01)}
 .section-title{display:block;background:var(--navy);color:#fff;padding:6px 10px;border-radius:6px;font-weight:700;margin-bottom:8px;font-size:12px;text-align:center}
 .card table{width:100%;border-collapse:collapse;font-size:13px;color:var(--muted)}
@@ -84,11 +83,11 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
 .card .k{text-align:left}
 .card .v{text-align:right;color:var(--muted)}
 
-/* smaller table font for neatness */
-.card table { font-size:13px; }
-.card td { font-size:13px; }
+/* small adjustment for table font */
+.card table{font-size:13px}
+.card td{font-size:13px}
 
-/* responsive */
+/* responsive adjustments */
 @media(max-width:980px){:root{--card-w:220px}}
 @media(max-width:640px){:root{--card-w:100%}}
 </style>
@@ -102,9 +101,9 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
   </div>
 
   <nav id="top-nav">
-    <a href="#hero" data-target="hero" id="nav-home">Beranda</a>
-    <a href="peta.html" class="btn-secondary" id="nav-peta">Peta Infrastruktur</a>
-    <a href="#dashboard" data-target="dashboard" id="nav-dashboard">Dashboard</a>
+    <a href="#hero" class="nav-link" id="nav-home">Beranda</a>
+    <a href="peta.html" class="nav-link" id="nav-peta">Peta Infrastruktur</a>
+    <a href="#dashboard" class="nav-link" id="nav-dashboard">Dashboard</a>
   </nav>
 </header>
 
@@ -113,8 +112,8 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
     <h1>Platform Digital BPBPK Maluku</h1>
     <p>Transparansi Data — Akses Informasi Infrastruktur Terbangun BPBPK Maluku</p>
     <div class="cta-row">
-      <a class="btn-primary" href="#dashboard">Lihat Dashboard</a>
-      <a class="btn-secondary" href="peta.html">Peta Infrastruktur</a>
+      <a class="btn" href="#dashboard">Lihat Dashboard</a>
+      <a class="btn" href="peta.html">Peta Infrastruktur</a>
     </div>
   </div>
 </section>
@@ -131,13 +130,12 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
 
 <section id="dashboard" class="dashboard" aria-labelledby="recap-title">
   <div class="container">
-
     <div class="recap-header">
       <h2 id="recap-title">Rekapitulasi Status Keberfungsian Infrastruktur Reguler Terbangun Tahun Anggaran 2020–2024</h2>
       <p>Ringkasan per sektor. Angka jumlah, nilai investasi, utilisasi (termasuk satuan), dan status keberfungsian.</p>
     </div>
 
-    <!-- Reguler: top row 3, bottom row 2 -->
+    <!-- Reguler: top 3, bottom 2 -->
     <div id="cards-reg-top" class="cards-row" aria-live="polite"></div>
     <div id="cards-reg-bottom" class="cards-row" aria-live="polite"></div>
 
@@ -148,7 +146,7 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
       <p>Ringkasan program IBM. Angka jumlah, nilai investasi, utilisasi (termasuk satuan) dan status keberfungsian.</p>
     </div>
 
-    <!-- IBM: top row 3, bottom row 2 -->
+    <!-- IBM: top 3, bottom 2 -->
     <div id="cards-ibm-top" class="cards-row" aria-live="polite"></div>
     <div id="cards-ibm-bottom" class="cards-row" aria-live="polite"></div>
 
@@ -160,14 +158,16 @@ nav a.active{background:var(--accent);color:#071016;font-weight:800;box-shadow:0
 </footer>
 
 <script>
-/* helpers */
+/* Basic JSON loader */
 async function loadJSON(path){
   try{ const r = await fetch(path,{cache:'no-store'}); if(!r.ok) return []; return await r.json(); }catch(e){ console.error(e); return []; }
 }
+/* pick helper */
 function pick(obj, keys){
   for(const k of keys) if(obj && obj[k] !== undefined && obj[k] !== null && String(obj[k]).trim() !== '') return obj[k];
   return null;
 }
+/* format investasi */
 function formatInvest(v){
   if(v === null || v === undefined || v === '') return 'Rp 0';
   const n = Number(String(v).replace(/[^0-9.-]+/g,''));
@@ -175,7 +175,55 @@ function formatInvest(v){
   return String(v);
 }
 
-/* build one card (prefix "Infrastruktur", name on next line) */
+/* split value and unit */
+function splitValueUnit(raw){
+  if(raw === null || raw === undefined) return { value:'', unit:'' };
+  const s = String(raw).trim();
+  const matchSpace = s.match(/^([0-9.,\-]+)\s*(.+)$/);
+  if(matchSpace) return { value: matchSpace[1], unit: matchSpace[2].replace(/\\//g,'/').trim() };
+  const matchConcat = s.match(/^([0-9.,\-]+)([a-zA-Z\/\u00B0\u00BA\u00B3\u00B2]+.*)$/);
+  if(matchConcat) return { value: matchConcat[1], unit: matchConcat[2].replace(/\\//g,'/').trim() };
+  return { value: s, unit: '' };
+}
+
+/* map JSON item to fields (with unit detection) */
+function mapItem(item){
+  const name = pick(item, ['Sektor','Program','Nama','Nama Program']) || '-';
+  const jumlah = String(pick(item, ['Jumlah Unit','Jumlah','Unit']) ?? '-');
+  const investRaw = pick(item, ['Nilai Investasi (Miliar)','Nilai Investasi','Investasi']);
+  const invest = formatInvest(investRaw);
+
+  const unitKapExplicit = pick(item, ['Satuan Kapasitas','Satuan','Unit Satuan','Satuan Kap']);
+  const unitLuasExplicit = pick(item, ['Satuan Luas','Satuan_area','Satuan Kawasan']);
+
+  const util = [];
+  const ktRaw = pick(item, ['Kapasitas Terpasang','Kapasitas terpasang']);
+  const kpRaw = pick(item, ['Kapasitas Terpakai','Kapasitas terpakai']);
+  const idleRaw = pick(item, ['Idle Capacity','Idle','Idle Capacity (L/detik)']);
+  const luasPenRaw = pick(item, ['Luas Penanganan','Luas Penanganan (ha)']);
+  const luasKawRaw = pick(item, ['Luas Kawasan','Luas Total Kawasan']);
+
+  function valWithUnit(rawVal, explicitUnit){
+    if(rawVal === null || rawVal === undefined || String(rawVal).trim() === '') return '-';
+    const su = splitValueUnit(rawVal);
+    if(explicitUnit && String(explicitUnit).trim() !== '') return (su.value || String(rawVal).trim()) + ' ' + String(explicitUnit).trim();
+    return su.unit ? (su.value + ' ' + su.unit) : su.value;
+  }
+
+  if(ktRaw !== null) util.push(['Kapasitas Terpasang', valWithUnit(ktRaw, unitKapExplicit)]);
+  if(kpRaw !== null) util.push(['Kapasitas Terpakai', valWithUnit(kpRaw, unitKapExplicit)]);
+  if(idleRaw !== null) util.push(['Idle Capacity', valWithUnit(idleRaw, unitKapExplicit)]);
+  if(luasPenRaw !== null) util.push(['Luas Penanganan', valWithUnit(luasPenRaw, unitLuasExplicit)]);
+  if(luasKawRaw !== null) util.push(['Luas Total Kawasan', valWithUnit(luasKawRaw, unitLuasExplicit)]);
+
+  const berf = pick(item, ['Berfungsi','Berfungsi Unit','Jumlah Berfungsi']);
+  const tbf = pick(item, ['Tidak Berfungsi','Tidak Berfungsi Unit','Jumlah Tidak Berfungsi']);
+  const status = [['Berfungsi', berf !== null ? String(berf) : '-'], ['Tidak Berfungsi', tbf !== null ? String(tbf) : '-']];
+
+  return { prefix: 'Infrastruktur', name, jumlah, invest, util, status };
+}
+
+/* build card HTML */
 function buildCard(prefix, name, jumlah, invest, utilRows, statusRows){
   const utilHtml = (utilRows && utilRows.length) ? `<div class="body"><div class="section-title">Utilisasi</div><table>${utilRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('')}</table></div>` : '';
   const statusHtml = `<div class="body"><div class="section-title">Status Keberfungsian</div><table>${statusRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('')}</table></div>`;
@@ -193,78 +241,38 @@ function buildCard(prefix, name, jumlah, invest, utilRows, statusRows){
   </div>`;
 }
 
-/* map item to fields with units */
-function mapItem(item){
-  const name = pick(item, ['Sektor','Program','Nama','Nama Program']) || '-';
-  const jumlah = String(pick(item, ['Jumlah Unit','Jumlah','Unit']) ?? '-');
-  const investRaw = pick(item, ['Nilai Investasi (Miliar)','Nilai Investasi','Investasi']);
-  const invest = formatInvest(investRaw);
-
-  const satuanKap = pick(item, ['Satuan Kapasitas','Satuan']) || '';
-  const satuanLuas = pick(item, ['Satuan Luas']) || '';
-
-  const util = [];
-  const kt = pick(item, ['Kapasitas Terpasang','Kapasitas terpasang']);
-  const kp = pick(item, ['Kapasitas Terpakai','Kapasitas terpakai']);
-  const idle = pick(item, ['Idle Capacity','Idle','Idle Capacity (L/detik)']);
-  const luasPen = pick(item, ['Luas Penanganan']);
-  const luasKaw = pick(item, ['Luas Kawasan','Luas Total Kawasan']);
-  if(kt !== null) util.push(['Kapasitas Terpasang', String(kt) + (satuanKap ? ' ' + satuanKap : '')]);
-  if(kp !== null) util.push(['Kapasitas Terpakai', String(kp) + (satuanKap ? ' ' + satuanKap : '')]);
-  if(idle !== null) util.push(['Idle Capacity', String(idle) + (satuanKap ? ' ' + satuanKap : '')]);
-  if(luasPen !== null) util.push(['Luas Penanganan', String(luasPen) + (satuanLuas ? ' ' + satuanLuas : '')]);
-  if(luasKaw !== null) util.push(['Luas Total Kawasan', String(luasKaw) + (satuanLuas ? ' ' + satuanLuas : '')]);
-
-  const berf = pick(item, ['Berfungsi','Berfungsi Unit','Jumlah Berfungsi']);
-  const tbf = pick(item, ['Tidak Berfungsi','Tidak Berfungsi Unit','Jumlah Tidak Berfungsi']);
-  const status = [['Berfungsi', berf !== null ? String(berf) : '-'], ['Tidak Berfungsi', tbf !== null ? String(tbf) : '-']];
-
-  return { prefix: 'Infrastruktur', name, jumlah, invest, util, status };
-}
-
 /* render rows: top 3, bottom 2 */
-function renderRows(topContainerId, bottomContainerId, dataArray){
-  const top = document.getElementById(topContainerId);
-  const bottom = document.getElementById(bottomContainerId);
-  top.innerHTML = '';
-  bottom.innerHTML = '';
-  const list = Array.isArray(dataArray) ? dataArray : [];
-  // top 3
-  list.slice(0,3).forEach(it => {
-    const f = mapItem(it);
-    top.insertAdjacentHTML('beforeend', buildCard(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
-  });
-  // bottom 2
-  list.slice(3,5).forEach(it => {
-    const f = mapItem(it);
-    bottom.insertAdjacentHTML('beforeend', buildCard(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
-  });
+function renderRows(topId, bottomId, data){
+  const top = document.getElementById(topId); top.innerHTML = '';
+  const bottom = document.getElementById(bottomId); bottom.innerHTML = '';
+  const list = Array.isArray(data) ? data : [];
+  list.slice(0,3).forEach(it => { const f = mapItem(it); top.insertAdjacentHTML('beforeend', buildCard(f.prefix,f.name,f.jumlah,f.invest,f.util,f.status)); });
+  list.slice(3,5).forEach(it => { const f = mapItem(it); bottom.insertAdjacentHTML('beforeend', buildCard(f.prefix,f.name,f.jumlah,f.invest,f.util,f.status)); });
 }
 
-/* load and render all */
+/* load and render */
 async function loadAndRender(){
   const reg = await loadJSON('data/rekap_reguler.json');
   const ibm = await loadJSON('data/rekap_ibm.json');
-  renderRows('cards-reg-top','cards-reg-bottom', Array.isArray(reg) ? reg : []);
-  renderRows('cards-ibm-top','cards-ibm-bottom', Array.isArray(ibm) ? ibm : []);
+  renderRows('cards-reg-top','cards-reg-bottom', Array.isArray(reg)?reg:[]);
+  renderRows('cards-ibm-top','cards-ibm-bottom', Array.isArray(ibm)?ibm:[]);
 }
 
-/* nav active highlight */
+/* active nav based on pathname or scroll position */
 function setActiveNav(){
-  const sections = [{id:'hero', nav:'nav-home'},{id:'dashboard', nav:'nav-dashboard'}];
-  const offset = window.scrollY + 80;
-  let active = 'nav-home';
-  for(const s of sections){
-    const el = document.getElementById(s.id);
-    if(!el) continue;
-    if(el.offsetTop <= offset) active = s.nav;
+  document.querySelectorAll('#top-nav a.nav-link').forEach(a=>a.classList.remove('active'));
+  const path = window.location.pathname.split('/').pop().toLowerCase();
+  if(path === 'peta.html'){
+    const p = document.getElementById('nav-peta'); if(p) p.classList.add('active'); return;
   }
-  document.querySelectorAll('#top-nav a').forEach(a=>a.classList.remove('active'));
-  const activeEl = document.getElementById(active);
-  if(activeEl) activeEl.classList.add('active');
+  const sections = [{id:'hero', nav:'nav-home'},{id:'dashboard', nav:'nav-dashboard'}];
+  const offset = window.scrollY + 90;
+  let active = 'nav-home';
+  for(const s of sections){ const el = document.getElementById(s.id); if(el && el.offsetTop <= offset) active = s.nav; }
+  const activeEl = document.getElementById(active); if(activeEl) activeEl.classList.add('active');
 }
 
-/* smooth scroll */
+/* smooth internal scroll */
 document.querySelectorAll('a[href^="#"]').forEach(a=>{
   a.addEventListener('click', e=>{
     const target = a.getAttribute('href').slice(1);
@@ -274,11 +282,7 @@ document.querySelectorAll('a[href^="#"]').forEach(a=>{
 });
 
 /* init */
-window.addEventListener('load', ()=>{
-  loadAndRender();
-  setActiveNav();
-  if(!location.hash) window.scrollTo(0,0);
-});
+window.addEventListener('load', ()=>{ loadAndRender(); setActiveNav(); if(!location.hash) window.scrollTo(0,0); });
 window.addEventListener('scroll', setActiveNav);
 </script>
 </body>
